@@ -1,4 +1,4 @@
-#	$OpenBSD: sshd_config,v 1.53 2002/05/15 21:02:53 markus Exp $
+#	$OpenBSD: sshd_config,v 1.54 2002/05/15 21:56:38 markus Exp $
 
 # This is the sshd server system-wide configuration file.  See sshd(8)
 # for more information.
@@ -80,7 +80,7 @@
 #PrintLastLog yes
 #KeepAlive yes
 #UseLogin no
-#UsePrivilegeSeparation no
+#UsePrivilegeSeparation yes
 
 #MaxStartups 10
 # no default banner path
